<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Resource Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_pc_power_off">Power Off</string>
    <string name="btn_wol">Wake on Lan</string>
    <string name="str_scan_btn">Scan</string>
    <string name="title_section1">PC Command</string>
    <string name="title_section2">WOL Register</string>
    <string name="title_section3">WOL List</string>
    <string name="button_wake">Send Wake Packet</string>
    <string name="button_save">Save &amp; End Editing</string>
    <string name="button_clear">Clear Form</string>
    <string name="button_cancel">Cancel Edit</string>
    <string name="tab_history">History</string>
    <string name="tab_wake">Wake</string>
    <string name="title_history">History</string>
    <string name="title_wake">Wake</string>
    <string name="title">Reference</string>
    <string name="mac">MAC Address</string>
    <string name="ip">Host Name / IP Address</string>
    <string name="port">Port</string>
    <string name="menu_wake">Send Wake Packet</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Remove</string>
    <string name="menu_sortby">Sort By</string>
    <string name="menu_lastused">Recent</string>
    <string name="menu_usedcount">Frequent</string>
    <string name="menu_created">Created</string>
    <string name="invalid_mac">Invalid MAC Address</string>
    <string name="send_failed">Sending Failed</string>
    <string name="packet_sent">Magic Packet sent</string>
    <string name="shutdown">Shutdown</string>

</resources>